# MemNinja-rs

./: Cargo.toml  README.md  flake.nix
crates/hoodhax/: Cargo.toml  README.md
crates/hoodhax/src/: main.rs
crates/hoodmem/: Cargo.toml
crates/hoodmem/src/: lib.rs  scanner.rs  util.rs  win.rs
crates/memninja/: Cargo.toml  README.md
crates/memninja-tui/: Cargo.toml
crates/memninja-tui/src/: main.rs
crates/memninja-tui/src/memninja_core/: mod.rs  types.rs  utils.rs
crates/memninja-tui/src/widgets/: input_box.rs  mod.rs
crates/memninja/src/: main.rs  memninja_core.rs
crates/memninja/src/memninja_core/: mod.rs  types.rs  utils.rs
