[package]
name = "hoodmem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
rayon = "1.7.0"
windows = { version = "0.51.1", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }
